--- a/README
+++ b/README
@@ -7,30 +7,31 @@ if xfile.xtension already exists in trash, rename target file to xfile(1).xtensi
 
 Development: 
 Next in the development cue are:
-simply printing the directory (should be easy, 1 day or so)
-clearing all metadata (should also be easy, 1 day or so)
 pulling data from file name, and inputting into file metadata (tricky, 1-3 days)
+installability (extra option, will require investigation and experimentation, please contact for more details)
 
 
 Working commands:
--c <or>--directory
+-c <or> --directory
 specifies working directory (required most of the time)
-ex: ./py_mp3 -c ~/Music <or> ./py_mp3 --directory ~/Music
+ex: ./pymp3 -c ~/Music <or> ./py_mp3 --directory ~/Music
 
 -r <or> --rip-file
 pulls data from file and pastes in file-name
-ex: ./py_mp3 -c ~/Music -r <or> ./py_mp3 -c ~/Music --rip-file
+ex: ./pymp3 -c ~/Music -r <or> ./py_mp3 -c ~/Music --rip-file
 
 -d <or> --default-config
 resets the config file at ~/.py_mp3.conf to the default format
-ex: ./py_mp3 -d
+ex: ./pymp3 -d
 note: will halt the rest of the program execution
+
+-p <or> --print-metadata:
+Prints metadata formatted according to ~/.py_mp3.conf format
+ex: .pymp3
 
 
 NON-WORKING commands (not yet implimented, will error or give unexpected results);
 -t <or> --pull-title
 pulls data from file title and pastes metadata
 
--p <or> --print-metadata:
-Prints metadata formatted according to ~/.py_mp3.conf
 
